:art: Resolve border style appearing embossed
I think it used the user-agent stylesheet, so just reuse the borders elsewhere on the DraggableField.

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -25,11 +25,11 @@
     }
 
     &-reduction-arg-value {
+      border: 1px solid #bfbfbe;
       border-radius: 3px;
-      border-width: 1px;
-      margin: 3px 0 3px 0;
       font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 11px;
+      margin: 3px 0 3px 0;
       width: 50%;
     }
   }
