:art: Add padding to make the user input more legible

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -30,6 +30,7 @@
       font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 11px;
       margin: 3px 0 3px 0;
+      padding: 1px 5px 1px 5px;
       width: 50%;
     }
   }
