COMPASS-1288 reductions args (#1152)
* :tada: Add initial <ArrayReductionArg> component + tests

* :sparkles: Integrate <ArrayReductionArg> into <ArrayReductionPicker> and <DraggableField>

* :art: Style pass

* :tada: Handle validation

* :sparkles: Allow validators to coerce to different types

* :sparkles: Single-stage $arrayElemAt works

* :memo: Multiple dimensionality $arrayElemAt reductions probably not working

Most likely will end up in a follow up ticket as I'm not sure how to build an aggregation pipeline for these cases. The single dimensionality case working is worthy of a PR though, as for all I know at this time, this could even be a server bug.

* :memo: Improve REDUCTION_ARGS_TEMPLATE JSDoc

* :fire: Remove unused 'type' prop from <ArrayReductionArg>

* :rotating_light: Relax proptype warnings

Having them be numbers instead of strings when in the store makes building the agg pipelines easier.

* :bug: Handle Undo/Redo

* :art: Clean up argsTemplate in tests

It's a relic of the earlier implementation where it was a prop and trying to write these tests helped expose how silly it was :)

* :bug: Allow negative indexes

https://github.com/10gen/compass/pull/1152#issuecomment-315952183

* :art: More descriptive user-facing label

https://github.com/10gen/compass/pull/1152#discussion_r127877932

* :art: Improve readability with line breaks

https://github.com/10gen/compass/pull/1152#discussion_r127875753

* :memo: Add JSDoc for <ArrayReductionPicker> methods

* Defer 2D and 3D array tests until COMPASS-1413

* :rotating_light: Coerce to default value of ''

Warning: FormControl is changing an uncontrolled input of type text to be controlled. Input elements should not switch from uncontrolled to controlled (or vice versa). Decide between using a controlled or uncontrolled input element for the lifetime of the component. More info: https://fb.me/react-controlled-components

* :art: Resolve border style app

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -1,3 +1,8 @@
+// Not sure how to nest these more clearly in less, CSS modules might be better
+.has-error .chart-draggable-field-row-reduction-arg-value {
+  border-color: #843534;  // Same as the color in document validation
+}
+
 .chart-draggable-field {
   cursor: -webkit-grab;
   background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
@@ -8,6 +13,26 @@
 
   &-row {
     display: flex;
+
+    &-reduction-arg-label {
+      font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 11px;
+      font-weight: normal;
+      overflow: hidden;
+      margin: 6px 0 0 6px;
+      text-overflow: ellipsis;
+      width: 50%;
+    }
+
+    &-reduction-arg-value {
+      border: 1px solid #bfbfbe;
+      border-radius: 3px;
+      font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 11px;
+      margin: 3px 0 3px 0;
+      padding: 1px 5px 1px 5px;
+      width: 50%;
+    }
   }
 
   &-item-container {
