COMPASS-618: Bring in latest mapbox

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -10,6 +10,8 @@
 
 @import "../auto-update/index.less";
 
+@import "../../node_modules/mapbox-gl/dist/mapbox-gl.css";
+
 // Packages
 // @todo don't hard-code these, style manager needs to handle package styles
 @import "../internal-packages/app/styles/index.less";
@@ -22,7 +24,6 @@
 @import "../internal-packages/status/styles/index.less";
 @import "../internal-packages/query/styles/index.less";
 @import "../internal-packages/schema/styles/index.less";
-@import "../internal-packages/schema/styles/mapbox-gl.css";
 @import "../internal-packages/indexes/styles/index.less";
 @import "../internal-packages/explain/styles/index.less";
 @import "../internal-packages/sidebar/styles/index.less";
