--- a/src/internal-packages/query/styles/querybar.less
+++ b/src/internal-packages/query/styles/querybar.less
@@ -44,7 +44,7 @@
   }
 
   &-input-container {
-    padding: 12px 10px 12px;
+    padding: 12px 0px 10px 12px;
     background: @gray8;
     border-bottom: 1px solid @gray7;
     overflow-x: hidden;
