--- a/src/internal-packages/collection-stats/styles/collection-stats.less
+++ b/src/internal-packages/collection-stats/styles/collection-stats.less
@@ -1,9 +1,9 @@
 .collection-stats {
   text-align: right;
-  padding-top: 9px;
   padding-right: 0;
   justify-content: flex-end;
   display: flex;
+  float: right;
 
   &-list {
     padding-left: 15px;
