--- a/src/internal-packages/collection/styles/index.less
+++ b/src/internal-packages/collection/styles/index.less
@@ -8,7 +8,8 @@
     padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: auto;
+    flex-basis: auto; 
+    margin: 20px 0 10px 0;
   }
 
   &-title {
@@ -20,7 +21,8 @@
     padding-left: 15px;
     padding-right: 15px;
     margin: 0;
-    padding-top: 9px;
+    float: left;
+    line-height: 32px;
   }
 
   &-database-name,
@@ -46,7 +48,6 @@
   }
 
   &-database-name-link {
-    color: @chart1;
     text-decoration: none;
     cursor: pointer;
   }
