--- a/src/internal-packages/query/styles/options-toggle.less
+++ b/src/internal-packages/query/styles/options-toggle.less
@@ -1,9 +1,12 @@
 .querybar-options-toggle {
   position: absolute;
-  top: 8px;
-  right: 10px;
-  font-size: 11px;
-  font-weight: bolder;
-  text-transform: uppercase;
+  top: 3px;
+  right: 5px;
+  padding-left: 5px;
   cursor: pointer;
+  border-radius: 0 9px 9px 0;
+
+  &-open {
+  	border-bottom-right-radius: 0;
+  }
 }
