--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 28px;
-  margin: 0 10px;
+  padding: 0 5px;
   border-top: 1px solid @gray7;
   overflow: scroll;
   width: 100%;
