--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -14,7 +14,7 @@
   }
 
   &-has-toggle {
-    padding-right: 150px;
+    padding-right: 85px;
   }
 
   &-is-document-type {
@@ -71,7 +71,8 @@
 
   &-input {
     flex-grow: 10;
-    width: 100%;
+    max-width: 100%;
+    width: 100vh;
     border: none;
     font-family: @font-family-monospace;
     font-size: 12px;
