Fix height bug for database and collection tab

--- a/src/internal-packages/home/styles/index.less
+++ b/src/internal-packages/home/styles/index.less
@@ -81,6 +81,7 @@ GLOBAL FLEXBOX LAYOUT STYLES
     flex-direction: column;
     align-items: stretch;
     width: 100%;
+    flex-grow: 1;
   }
 
     .controls-container {
