--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -15,6 +15,7 @@
 
   &-has-toggle {
     padding-right: 85px;
+    width: calc(~"100% - 60px")!important;
   }
 
   &-is-document-type {
@@ -72,7 +73,6 @@
   &-input {
     flex-grow: 10;
     max-width: 100%;
-    width: 100vh;
     border: none;
     font-family: @font-family-monospace;
     font-size: 12px;
