Revert back to width instead of max

--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -72,7 +72,7 @@
 
   &-input {
     flex-grow: 10;
-    max-width: 100%;
+    width: 100%;
     border: none;
     font-family: @font-family-monospace;
     font-size: 12px;
