--- a/src/app/index.less
+++ b/src/app/index.less
@@ -17,6 +17,7 @@
 @import "../internal-packages/app/styles/index.less";
 @import "../internal-packages/collection/styles/index.less";
 @import "../internal-packages/collection-stats/styles/index.less";
+@import "../internal-packages/crud/styles/index.less";
 @import "../internal-packages/database-ddl/styles/index.less";
 @import "../internal-packages/home/styles/index.less";
 @import "../internal-packages/status/styles/index.less";
