--- a/src/app/index.less
+++ b/src/app/index.less
@@ -18,6 +18,7 @@
 @import "../internal-packages/collection/styles/index.less";
 @import "../internal-packages/collection-stats/styles/index.less";
 @import "../internal-packages/chart/styles/index.less";
+@import "../internal-packages/crud/styles/index.less";
 @import "../internal-packages/database-ddl/styles/index.less";
 @import "../internal-packages/home/styles/index.less";
 @import "../internal-packages/status/styles/index.less";
