Remove default 8px margin

--- a/src/app/loading/style.css
+++ b/src/app/loading/style.css
@@ -15,6 +15,7 @@ html, body {
   color: #333;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
+  margin: 0;
   position: relative;
 }
 
