Go back to width: 100% removing margin/padding
No flexbox needed in this context.

--- a/src/app/loading/style.css
+++ b/src/app/loading/style.css
@@ -61,12 +61,11 @@ html, body {
 span {
   position: absolute;
   top: 50%;
-  left: 50%;
-  margin-left: -26px;
   text-align: center;
   font-size: 11px;
   line-height: 1;
   text-transform: uppercase;
   text-align: center;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
