Abstract towards a reusable loading animation component
CSS animation appears to be special enough I don't know how to handle it in this context, perhaps it needs another wrapper?

--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -4,8 +4,10 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="sq sq1"></div>
-    <div class="sq sq2"></div>
-    <span>loading&hellip;</span>
+    <div class="loading-animation">
+      <div class="sq sq1"></div>
+      <div class="sq sq2"></div>
+      <span>loading&hellip;</span>
+    </div>
   </body>
 </html>
