COMPASS-1960: Bring in new status plugin

--- a/src/internal-packages/schema/styles/status-subview.less
+++ b/src/internal-packages/schema/styles/status-subview.less
@@ -25,6 +25,7 @@
 
     li {
       margin: 10px 0;
+      list-style: none;
 
       &.is-active {
         color: @chart1; // same blue as mini charts
