--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://compass-maps.mongodb.com
+      https://notify.bugsnag.com https://js.intercomcdn.com https://api-iam.intercom.io;">
   </head>
   <body>
     <div id="application">
