--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="initial-scale=1">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval';
-      img-src * data:;
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' blob:;
+      img-src * data: blob:;
       style-src * 'unsafe-inline';
-      connect-src https://stitch.mongodb.com https://api-iam.intercom.io https://nexus-websocket-a.intercom.io https://nexus-websocket-b.intercom.io https://app.getsentry.com wss://nexus-websocket-a.intercom.io wss://nexus-websocket-b.intercom.io;
+      worker-src * blob:;
+      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://api-iam.intercom.io https://nexus-websocket-a.intercom.io https://nexus-websocket-b.intercom.io https://app.getsentry.com wss://nexus-websocket-a.intercom.io wss://nexus-websocket-b.intercom.io https://nexus-long-poller-b.intercom.io;
       script-src 'self' intercom.io https://widget.intercom.io https://js.intercomcdn.com 'unsafe-eval';
       font-src * https://js.intercomcdn.com;">
   </head>
