--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,8 +6,8 @@
       img-src * data: blob:;
       style-src * 'unsafe-inline';
       worker-src * blob:;
-      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://api-iam.intercom.io https://nexus-websocket-a.intercom.io https://nexus-websocket-b.intercom.io https://app.getsentry.com wss://nexus-websocket-a.intercom.io wss://nexus-websocket-b.intercom.io https://nexus-long-poller-b.intercom.io;
-      script-src 'self' intercom.io https://widget.intercom.io https://js.intercomcdn.com 'unsafe-eval';
+      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://*.intercom.io wss://*.intercom.io https://app.getsentry.com;
+      script-src 'self' http://intercom.io https://*.intercom.io https://js.intercomcdn.com 'unsafe-eval';
       font-src * https://js.intercomcdn.com;">
   </head>
   <body>
