--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,7 +7,7 @@
       style-src * 'unsafe-inline';
       worker-src * blob:;
       connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://*.intercom.io wss://*.intercom.io https://app.getsentry.com;
-      script-src 'self' http://intercom.io https://*.intercom.io https://js.intercomcdn.com 'unsafe-eval';
+      script-src 'self' https://intercom.io https://*.intercom.io https://js.intercomcdn.com 'unsafe-eval';
       font-src * https://js.intercomcdn.com;">
   </head>
   <body>
