COMPASS-2079 - Create Content Security Policy (#1251)
* Add CSP

* Progress

* More urls

* Clean up

* Remove unused url

* Revert "Remove unused url"

This reverts commit 3436bad12a8657e261c7b6ec5153f5718e5560b5.

* https

* Remove unused worker-src

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' blob:;
+      img-src * data: blob:;
+      style-src * 'unsafe-inline';
+      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://*.intercom.io wss://*.intercom.io https://app.getsentry.com;
+      script-src 'self' https://intercom.io https://*.intercom.io https://js.intercomcdn.com 'unsafe-eval';
+      font-src * https://js.intercomcdn.com;">
   </head>
   <body>
     <div id="application">
