--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' blob:;
       img-src * data: blob:;
       style-src * 'unsafe-inline';
-      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://*.intercom.io wss://*.intercom.io https://app.getsentry.com;
+      connect-src https://compass-maps.mongodb.com https://stitch.mongodb.com https://*.intercom.io wss://*.intercom.io https://app.getsentry.com https://*.google-analytics.com;
       script-src 'self' https://intercom.io https://*.intercom.io https://js.intercomcdn.com 'unsafe-eval';
       font-src * https://js.intercomcdn.com;">
   </head>
