--- a/src/internal-plugins/collection-stats/styles/collection-stats.less
+++ b/src/internal-plugins/collection-stats/styles/collection-stats.less
@@ -12,6 +12,8 @@
     flex-basis: auto;
     flex-grow: 0;
     flex-shrink: 0;
+    display: flex;
+    align-items: flex-end;
     margin-bottom: 0;
   }
 
