COMPASS-2244: Bring back the scrollbars

--- a/src/app/styles/react-select.less
+++ b/src/app/styles/react-select.less
@@ -56,10 +56,6 @@
       z-index: 1;
       -webkit-overflow-scrolling: touch;
     }
-
-    &::-webkit-scrollbar {
-      display:none;
-    }
   }
 
   &-option {
@@ -378,4 +374,8 @@
   to {
     -webkit-transform: rotate(1turn);
   }
+}
+
+.Select-menu::-webkit-scrollbar {
+  display:none;
 }
