--- a/src/internal-plugins/query/styles/auto-complete.less
+++ b/src/internal-plugins/query/styles/auto-complete.less
@@ -35,6 +35,6 @@ ul.CodeMirror-hints {
     border-bottom: 1px solid grey;
 }
 
-::-webkit-scrollbar {
+.querybar-option::-webkit-scrollbar {
   display: none;
 }
