Remove feature flag shortcuts from query bar

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -32,6 +32,7 @@
         https://app.getsentry.com
         https://*.google-analytics.com;
       child-src
+        blob:
         https://share.intercom.io
         https://www.youtube.com
         https://player.vimeo.com
