Reduce header height

--- a/src/internal-plugins/collection/styles/index.less
+++ b/src/internal-plugins/collection/styles/index.less
@@ -9,7 +9,7 @@
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: auto; 
-    margin: 20px 0 10px 0;
+    margin-top: 15px;
   }
 
   &-title {
