--- a/src/internal-plugins/query/styles/querybar.less
+++ b/src/internal-plugins/query/styles/querybar.less
@@ -17,7 +17,7 @@
     border-radius: 14px;
     border: 1px solid @gray5;
     background: @pw;
-    margin-right: 10px;
+    margin-right: 5px;
     overflow: hidden; 
 
     & > .querybar-option:first-child {
@@ -44,7 +44,7 @@
   }
 
   &-input-container {
-    padding: 12px 0px 10px 12px;
+    padding: 10px 15px;
     background: @gray8;
     border-bottom: 1px solid @gray7;
     overflow-x: hidden;
