Normal case database and instance tabs; fix refresh button style

--- a/src/internal-plugins/query/styles/sampling-message.less
+++ b/src/internal-plugins/query/styles/sampling-message.less
@@ -1,5 +1,4 @@
 .sampling-message {
-
   border-bottom: 1px solid @gray7;
   font-size: 13px;
   font-weight: 200;
@@ -9,5 +8,7 @@
 
   &-refresh-documents {
     float: right;
+    width: 28px;
+	padding: 0;
   }
 }
