Add initial zero state for schema and base zero state styles

--- a/src/app/styles/buttons.less
+++ b/src/app/styles/buttons.less
@@ -237,3 +237,13 @@
     }
   }
 }
+
+// LINK BUTTON STYLES
+
+a.btn {
+  display: inline-block;
+
+  &:hover, &:focus {
+    text-decoration: none;
+  }
+}
