--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -3,6 +3,7 @@
 @import "./caret.less";
 @import "./buttons.less";
 @import "./react-select.less";
+@import "./zero-state.less";
 
 // TODO: Is this import broken?
 @import (css) "../../node_modules/highlight.js/styles/github.css";
