Secure the loading window:
- Disable all node integration (no access to node modules)
- Only allow content from self, nothing external

--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
