COMPASS-2302: Set object-src to none in CSP

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -60,6 +60,8 @@
         https://widget.intercom.io
         https://js.intercomcdn.com
         'unsafe-eval';
+      object-src
+        'none';
       font-src * https://js.intercomcdn.com;">
   </head>
   <body>
