Fix plugin info and image csp

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -21,9 +21,10 @@
         https://js.intercomcdn.com
         https://uploads.intercomcdn.com
         https://uploads.intercomusercontent.com;
-      img-src *
+      img-src
         data:
         blob:
+        file://*
         https://js.intercomcdn.com
         https://static.intercomassets.com
         https://downloads.intercomcdn.com
