COMPASS-2408: Load Intercom in Sandboxed iFrame

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -22,3 +22,4 @@
 @import "../internal-plugins/sidebar/styles/index.less";
 @import "../internal-plugins/database/styles/index.less";
 @import "../internal-plugins/instance-header/styles/index.less";
+@import "../internal-plugins/metrics/styles/index.less";
