--- a/src/internal-plugins/metrics/lib/component/intercom.html
+++ b/src/internal-plugins/metrics/lib/component/intercom.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="initial-scale=1">
     <meta http-equiv="Content-Security-Policy" content="
       default-src
         'self'
@@ -25,7 +24,6 @@
         data:
         blob:
         file://*
-        https://notify.bugsnag.com
         https://js.intercomcdn.com
         https://static.intercomassets.com
         https://downloads.intercomcdn.com
@@ -33,8 +31,6 @@
         https://gifs.intercomcdn.com;
       style-src * 'unsafe-inline';
       connect-src
-        https://compass-maps.mongodb.com
-        https://stitch.mongodb.com
         https://api.intercom.io
         https://api-iam.intercom.io
         https://api-ping.intercom.io
@@ -47,12 +43,9 @@
         https://widget.intercom.io
         https://js.intercomcdn.com
         https://uploads.intercomcdn.com
-        https://uploads.intercomusercontent.com
-        https://app.getsentry.com
-        https://*.google-analytics.com;
+        https://uploads.intercomusercontent.com;
       child-src
         blob:
-        file://*
         https://share.intercom.io
         https://www.youtube.com
         https://player.vimeo.com
@@ -66,14 +59,9 @@
       object-src
         'none';
       font-src * https://js.intercomcdn.com;">
+    <script src="intercom-widget.js" charset="UTF-8"></script>
+    <script src="intercom-boot.js" charset="UTF-8"></script>
   </head>
   <body>
-    <div id="application">
-      <div data-hook="auto-update"></div>
-      <div data-hook="statusbar" data-test-id="status-bar"></div>
-      <div data-hook="layout-container">
-      </div>
-    </div>
-    <script src="index.js" charset="UTF-8" async></script>
   </body>
 </html>
