Simplify the core CSP

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,66 +6,26 @@
       default-src
         'self'
         'unsafe-eval'
-        blob:
-        https://js.intercomcdn.com
-        https://api.intercom.io
-        https://api-iam.intercom.io
-        https://api-ping.intercom.io
-        https://nexus-websocket-a.intercom.io
-        https://nexus-websocket-b.intercom.io
-        https://nexus-long-poller-a.intercom.io
-        https://nexus-long-poller-b.intercom.io
-        wss://nexus-websocket-a.intercom.io
-        wss://nexus-websocket-b.intercom.io
-        https://widget.intercom.io
-        https://js.intercomcdn.com
-        https://uploads.intercomcdn.com
-        https://uploads.intercomusercontent.com;
+        blob:;
       img-src
         data:
         blob:
         file://*
-        https://notify.bugsnag.com
-        https://js.intercomcdn.com
-        https://static.intercomassets.com
-        https://downloads.intercomcdn.com
-        https://uploads.intercomusercontent.com
-        https://gifs.intercomcdn.com;
+        https://notify.bugsnag.com;
       style-src * 'unsafe-inline';
       connect-src
         https://compass-maps.mongodb.com
         https://stitch.mongodb.com
-        https://api.intercom.io
-        https://api-iam.intercom.io
-        https://api-ping.intercom.io
-        https://nexus-websocket-a.intercom.io
-        https://nexus-websocket-b.intercom.io
-        https://nexus-long-poller-a.intercom.io
-        https://nexus-long-poller-b.intercom.io
-        wss://nexus-websocket-a.intercom.io
-        wss://nexus-websocket-b.intercom.io
-        https://widget.intercom.io
-        https://js.intercomcdn.com
-        https://uploads.intercomcdn.com
-        https://uploads.intercomusercontent.com
         https://app.getsentry.com
         https://*.google-analytics.com;
       child-src
         blob:
-        file://*
-        https://share.intercom.io
-        https://www.youtube.com
-        https://player.vimeo.com
-        https://fast.wistia.net;
+        file://*;
       script-src
         'self'
-        https://app.intercom.io
-        https://widget.intercom.io
-        https://js.intercomcdn.com
         'unsafe-eval';
       object-src
-        'none';
-      font-src * https://js.intercomcdn.com;">
+        'none';">
   </head>
   <body>
     <div id="application">
