COMPASS-2907 updated greens in palette.less and buttons

--- a/src/internal-plugins/schema/styles/status-subview.less
+++ b/src/internal-plugins/schema/styles/status-subview.less
@@ -4,8 +4,8 @@
   }
 
   .btn.btn-info:hover {
-    background-color: #67b144;
-    border-color: #67b144;
+    background-color: @green2;
+    border-color:@green2;
     color: white;
   }
   div.buttons {
