--- a/src/app/styles/buttons.less
+++ b/src/app/styles/buttons.less
@@ -46,41 +46,43 @@
   }
 
   &-primary {
-    background: linear-gradient(180deg, #6BA442 0%, #5A9330 100%);
-    border: 1px solid #4D7A2D;
-    box-shadow: inset 0 -1px 0 0 #4D7A2D;
-    color: white;
+    background: linear-gradient(-180deg, @green2 0%, lighten(@green1, 2.5%) 100%);
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.15);
+    border: 1px solid darken(@green1, 2%);
+    color: @pw;
 
     &:hover, &:focus {
-      background: linear-gradient(180deg, #6BA442 0%, #4A7E25 100%);
-      box-shadow: inset 0 -1px 0 0 #3B6A1B, 0 2px 4px 0 rgba(0,0,0,0.1);
-      border: 1px solid #3B6A1B;
+      background: linear-gradient(-180deg, darken(@green2, 2.5%) 0%, darken(@green1, 2.5%) 100%);
+      box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.3);
+      border: 1px solid darken(@green1, 7%);
     }
 
     &:active {
-      background: linear-gradient(180deg, #4A7E25 0%, #6BA442 100%);
-      box-shadow: inset 0 2px 2px 0 #3B6A1B;
-      border: 1px solid #3B6A1B;
+      background: linear-gradient(-180deg, darken(@green1, 2.5%) 0%, darken(@green2, 2.5%) 100%);
+      box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+      border: 1px solid solid darken(@green1, 7%);
     }
   }
 
   &-info {
-    background-color: #FFFFFF;
-    border: 1px solid #6BA442;
+    background-color: transparent;
+    border: 1px solid @green2;
     border-radius: 3px;
     box-shadow: none;
-    color: #6BA442;
+    color: @green2;
 
     &:hover, &:focus {
-      background: linear-gradient(180deg, #6BA442 0%, #5A9330 100%);
-      box-shadow: inset 0 -1px 0 0 #4D7A2D, 0 2px 4px 0 rgba(0,0,0,0.1);
-      border: 1px solid #4D7A2D;
-      color: white;
+      background: linear-gradient(-180deg, darken(@green2, 2.5%) 0%, darken(@green1, 2.5%) 100%);
+      box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.3);
+      border: 1px solid darken(@green1, 7%);
+      color: @pw;
     }
 
     &:active {
-      background: linear-gradient(180deg, #578B30 0%, #6BA442 100%);
-      box-shadow: inset 0 2px 2px 0 #4D7A2D;
+      background: linear-gradient(-180deg, darken(@green1, 2.5%) 0%, darken(@green2, 2.5%) 100%);
+      box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+      border: 1px solid solid darken(@green1, 7%);
+      color: @pw;
     }
   }
 
