--- a/src/app/styles/palette.less
+++ b/src/app/styles/palette.less
@@ -3,13 +3,14 @@
 
 /* MongoDB Color Palette */
 /* commented colors have been deprecated */
-@green0: #365221;
-@green1: #507b32;
-@green2: #67b144;
-@green3: #86bc63;
-@green4: #a6c88e;
-@green5: #c4dbb3;
-@green6: #69AD55;
+// New Greens
+@green0: #0E7E3D; 
+@green1: #168B46;
+@green2: #13AA52; // Primary green
+@green3: #1CC061; 
+@green4: #14B357;
+@green5: #16CC62; 
+@green6: #E0FEEF;
 
 @gray0: #313030;
 @gray1: #494747;
@@ -47,14 +48,14 @@
 @pw: #fff;
 @cautionOrange: @alertOrange;
 @errorBackground: #fdd0d1;
-@greenBg: #e9f2e3;
+@greenBg: lighten(@green6, 4%);
 
 /* Text Colors */
 /* default text color is @gray1 */
 @linkText: #006cbc;
 @linkOnDark: #2898dd;
 @warningText: #ffb618;
-@successText: #6ca439;
+@successText: @green2;
 @errorText: #ed271c;
 @mutedText: @gray4;
 @veryMutedText: @gray5;
