--- a/src/app/styles/palette.less
+++ b/src/app/styles/palette.less
@@ -3,14 +3,13 @@
 
 /* MongoDB Color Palette */
 /* commented colors have been deprecated */
-// New Greens
 @green0: #0E7E3D; 
 @green1: #168B46;
 @green2: #13AA52; // Primary green
 @green3: #1CC061; 
-@green4: #14B357;
-@green5: #16CC62; 
-@green6: #E0FEEF;
+@green4: #89E5B3;
+@green5: #CCFFE1; 
+@green6: #EFFEF6;
 
 @gray0: #313030;
 @gray1: #494747;
@@ -48,7 +47,7 @@
 @pw: #fff;
 @cautionOrange: @alertOrange;
 @errorBackground: #fdd0d1;
-@greenBg: lighten(@green6, 4%);
+@greenBg: @green6;
 
 /* Text Colors */
 /* default text color is @gray1 */
