Move sample message css to schema plugin

--- a/src/internal-plugins/schema/styles/index.less
+++ b/src/internal-plugins/schema/styles/index.less
@@ -13,6 +13,21 @@
 @mc-fg-selected: @chart0;
 @mc-fg-unselected: @gray6;
 
+.sampling-message {
+  border-bottom: 1px solid @gray7;
+  font-size: 13px;
+  font-weight: 200;
+  height: 32px;
+  padding: 5px 15px 5px 15px;
+  background: @gray8;
+
+  &-refresh-documents {
+    float: right;
+    width: 28px;
+    padding: 0;
+  }
+}
+
 .schema-field-list {
   // .list-group;
 
