--- a/src/internal-plugins/database-ddl/styles/create-collection-dialog.less
+++ b/src/internal-plugins/database-ddl/styles/create-collection-dialog.less
@@ -9,9 +9,41 @@
     margin: 0;
   }
 
+  div.form-group:last-child {
+    margin-bottom: 0;
+  }
+
   &-capped {
     margin-left: 5px;
     display: inline-block;
+  }
+
+  &-collation {
+    margin-left: 5px;
+    display: inline-block;
+
+    &-field {
+      margin: 10px 0 10px 0;
+      display: flex;
+      align-items: center;
+    }
+
+    &-select {
+      width: 250px;
+      display: inline-block;
+      text-transform: capitalize;
+    }
+
+    &-label {
+      width: 150px;
+      text-align: right;
+      display: inline-block;
+      margin: 0 10px 0 0;
+    }
+
+    &-div {
+      margin-bottom: 20px;
+    }
   }
 
   &-size-input {
