adjusted zero state fonts

--- a/src/app/styles/zero-state.less
+++ b/src/app/styles/zero-state.less
@@ -9,12 +9,17 @@
 	&-header {
 		font-size: 32px;
 		font-weight: lighter;
+		margin: 0;
+		padding: 15px 0 11px 0;
 	}
 
 	&-subheader {
-		font-size: 18px;
+		font-size: 21px;
+		font-weight: lighter;
+		line-height: 26px;
 		max-width: 600px;
-		margin-bottom: 20px;
+		padding: 0 0 28px 0;
+		margin: 0;
 	}
 
 	&-body {
