--- a/src/app/styles/zero-state.less
+++ b/src/app/styles/zero-state.less
@@ -24,12 +24,10 @@
   }
 
   &-body {
-    .btn:first-child {
-      box-shadow: 0 15px 35px 0 rgba(0,0,0,0.1), 
-        inset 0 -2px 0 0 #4D7A2D;
-    }
-    .btn:nth-child(2) {
-      margin-left: 10px;
+    .zero-state-link {
+      display: block;
+      padding-top: 20px;
+      font-size: 15px;
     }
   }
 }
