Create collation UI

--- a/src/internal-plugins/indexes/styles/create-index-modal.less
+++ b/src/internal-plugins/indexes/styles/create-index-modal.less
@@ -71,6 +71,19 @@
         }
       }
 
+      .create-index-collation {
+        display: inline-block;
+        padding-bottom: 20px;
+
+        .create-collection-dialog-collation-label {
+          width: 125px;
+        }
+      }
+
+      .create-index-collation-hidden {
+        display: none;
+      }
+
       .create-index-param {
         margin-bottom: 12px;
 
