Create index with collation

--- a/src/internal-plugins/indexes/styles/create-index-modal.less
+++ b/src/internal-plugins/indexes/styles/create-index-modal.less
@@ -71,13 +71,14 @@
         }
       }
 
-      .create-index-collation {
+      .create-index-collation-title {
         display: inline-block;
-        padding-bottom: 20px;
+        margin-left: 10px;
+        font-weight: normal;
+      }
 
-        .create-collection-dialog-collation-label {
-          width: 125px;
-        }
+      .create-collection-dialog-collation-label {
+        width: 125px;
       }
 
       .create-index-collation-hidden {
