--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -19,6 +19,15 @@
 // Tweaks to bootstrap
 @import "./message-background.less";
 
+/* Styles from previous internal-plugin app */
+@import './modal-status-message.less';
+@import './hadron-tooltip.less';
+@import './info-sprinkle.less';
+@import './option-selector.less';
+@import './sortable-table.less';
+@import './status-row.less';
+@import './tab-nav-bar.less';
+
 html, body {
   height: 100%;
   width: 100%;
