Fix tooltip height bug

--- a/src/internal-plugins/app/styles/hadron-tooltip.less
+++ b/src/internal-plugins/app/styles/hadron-tooltip.less
@@ -1,5 +1,5 @@
 .hadron-tooltip {
-  height: 24px;
+  min-height: 24px;
   font-size: 11px;
   opacity: 1 !important;
   padding: 3px 6px !important;
