Add database-error to images

--- a/src/app/styles/zero-state.less
+++ b/src/app/styles/zero-state.less
@@ -58,4 +58,8 @@
   &-validation {
     background: transparent url('images/svg/validation-zero.svg') 50% no-repeat;
   }
+
+  &-non-genuine-mongodb {
+    background: transparent url('images/svg/database-error.svg') 50% no-repeat;
+  }
 }
