Adding better status to loading screen

--- a/src/app/loading/style.css
+++ b/src/app/loading/style.css
@@ -1,72 +1,4 @@
-@font-face {
-    font-family: 'Akzidenz';
-    src: url('../fonts/akzidgrostdmed.eot');
-    src: url('../fonts/akzidgrostdmed.eot') format('embedded-opentype'),
-    url('../fonts/akzidgrostdmed.woff') format('woff'),
-    url('../fonts/akzidgrostdmed.ttf')  format('truetype');
-    font-style: normal;
-    font-weight: bold;
-}
-
 html, body {
-  font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
+  background-color: #3D4F58;
   margin: 0;
-  position: relative;
-}
-
-.loading-animation {
-  align-items: center;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  width: 100vw;
-}
-
-.sq {
-  background: #43B1E5;
-  position: absolute;
-  height: 12px;
-  width: 12px;
-  /* So animation does not overlap with loading text */
-  margin-top: -36px;
-}
-
-@keyframes SQ1 {
-  0%    { transform: translate(0%,     50%)    scaleX(1); background-color: #43B1E5; }
-  12.5% { transform: translate(-50%,   50%)    scaleX(0); background-color: #4D5359;  }
-  25%   { transform: translate(-100%,  50%)    scaleX(1); background-color: #43B1E5; }
-  37.5% { transform: translate(-100%,  0%)     scaleX(1); }
-  50%   { transform: translate(-100%, -50%)    scaleX(1); background-color: #43B1E5; }
-  62.5% { transform: translate(-50%,  -50%)    scaleX(0); background-color: #4D5359;  }
-  75%   { transform: translate(0%,    -50%)    scaleX(1); background-color: #43B1E5; }
-  100%  { transform: translate(0%,     50%)    scaleX(1); }
-}
-
-@keyframes SQ2 {
-  0%    { transform: translate(-100%, -50%)   scaleX(1); background-color: #43B1E5;}
-  12.5% { transform: translate(-50%,  -50%)   scaleX(0); background-color: #4D5359; }
-  25%   { transform: translate(0%,    -50%)   scaleX(1); background-color: #43B1E5;}
-  50%   { transform: translate(0%,     50%)   scaleX(1); background-color: #43B1E5;}
-  62.5% { transform: translate(-50%,   50%)   scaleX(0); background-color: #4D5359; }
-  75%   { transform: translate(-100%,  50%)   scaleX(1); background-color: #43B1E5;}
-  100%  { transform: translate(-100%, -50%)   scaleX(1); }
-}
-
-.sq1 {
-  animation: SQ1 1.25s infinite cubic-bezier(0.470, 0.000, 0.745, 0.715);
-}
-
-.sq2 {
-  animation: SQ2 1.25s infinite cubic-bezier(0.470, 0.000, 0.745, 0.715);
-}
-
-span {
-  text-align: center;
-  font-size: 11px;
-  line-height: 1;
-  text-transform: uppercase;
-  width: 100%;
 }
