--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="loading-animation">
-      <div class="sq sq1"></div>
-      <div class="sq sq2"></div>
-      <span>loading&hellip;</span>
+    <div id="root">
     </div>
+    <script src="loading.js" charset="UTF-8" async></script>
   </body>
 </html>
